# recart

./: DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICKREF.txt  README.md  pyproject.toml  quickstart.sh
.github/prompts/: add-game-feature.prompt.md  add-hud-panel.prompt.md  add-language-strings.prompt.md  add-world-entity.prompt.md  write-tests.prompt.md
spaceship_simulator/: __init__.py  input_handler.py  main.py
spaceship_simulator/config/: constants.py
spaceship_simulator/hud/: __init__.py  hud_textures.py  panel.py  radar_mouse.py  realistic_hud.py
spaceship_simulator/ship/: __init__.py  ship.py
spaceship_simulator/utils/: math_utils.py
spaceship_simulator/world/: starfield.py  universe.py  world_renderer.py
